--- a/frontendAndroid/DriverApp/app/src/main/res/layout/driver_profile.xml
+++ b/frontendAndroid/DriverApp/app/src/main/res/layout/driver_profile.xml
@@ -95,8 +95,8 @@
         android:id="@+id/full_name_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="26dp"
-        android:layout_marginLeft="26dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginEnd="21dp"
         android:layout_marginRight="21dp"
         android:text="@string/full_name_label"
@@ -104,7 +104,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/username_label"
         app:layout_constraintEnd_toStartOf="@+id/fullname_textview"
-        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -192,8 +192,8 @@
         android:id="@+id/car_model_textview"
         android:layout_width="223dp"
         android:layout_height="60dp"
-        android:layout_marginStart="19dp"
-        android:layout_marginLeft="19dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginLeft="17dp"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="14dp"
         android:ems="10"
