Removed Homepage activity altogether, App now starts with the login screen, same as in Driver app
Updated Passenger app be able to login/register

--- a/frontendAndroid/passengerAndroid/app/src/main/res/layout/register_page.xml
+++ b/frontendAndroid/passengerAndroid/app/src/main/res/layout/register_page.xml
@@ -28,7 +28,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="64dp"
-        android:onClick="register"
+        android:onClick="onRegisterPress"
         android:text="@string/register_button"
         android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -82,8 +82,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="24dp"
         android:ems="10"
+        android:hint="@string/name_label"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintBottom_toTopOf="@+id/usernameField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
