--- a/frontendAndroid/passengerAndroid/app/src/main/res/layout/activity_login.xml
+++ b/frontendAndroid/passengerAndroid/app/src/main/res/layout/activity_login.xml
@@ -20,6 +20,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/homepage_page" />
+    <include layout="@layout/login_page" />
 
 </android.support.design.widget.CoordinatorLayout>
