--- a/frontendAndroid/passengerAndroid/app/src/main/res/layout/login_page.xml
+++ b/frontendAndroid/passengerAndroid/app/src/main/res/layout/login_page.xml
@@ -26,7 +26,7 @@
         android:layout_marginEnd="84dp"
         android:layout_marginRight="84dp"
         android:layout_marginBottom="72dp"
-        android:onClick="register"
+        android:onClick="onRegisterPress"
         android:text="@string/register_button"
         android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,7 +40,7 @@
         android:layout_marginStart="84dp"
         android:layout_marginLeft="84dp"
         android:layout_marginBottom="72dp"
-        android:onClick="login"
+        android:onClick="onLoginPress"
         android:text="@string/login_label"
         android:textAppearance="@style/TextAppearance.AppCompat"
         app:layout_constraintBottom_toBottomOf="parent"
